--- a/src/templates/pages/contact.pug
+++ b/src/templates/pages/contact.pug
@@ -7,3 +7,20 @@ html(⚡)
   body
     include ../partials/navigation
     +navigation("contact")
+
+    div.content
+      h2 Contact us:
+
+      amp-img(src="/assets/images/phone.svg" width="36" height="36")
+      a(href="tel:+48796175253").
+        +48796175253
+      a(href="tel:+48696074601").
+        +48696074601
+
+      amp-img(src="/assets/images/mail.svg" width="36" height="36")
+      a(href="mailto:slowersilesia@gmail.com").
+        slowersilesia@gmail.com
+
+      amp-img(src="/assets/images/people.svg" width="36" height="36")
+      a(href="https://www.facebook.com/slowersilesia").
+        facebook.com/slowersilesia
