--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,2 +1,17 @@
 @import 'constants';
 @import 'navigation';
+
+body > div.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  > amp-img {
+    margin-top: $toolbar-height / 2;
+  }
+
+  > a {
+    color: $color-accent;
+    line-height: $toolbar-height / 2;
+  }
+}
