--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,6 +32,7 @@ body {
 
 .content {
   max-width: $max-width;
+  margin-top: $toolbar-height;
   margin-right: auto;
   margin-left: auto;
   padding: 2rem;
