--- a/src/styles/lower-silesia.scss
+++ b/src/styles/lower-silesia.scss
@@ -1,3 +1,4 @@
+@import 'base';
 @import 'constants';
 @import 'navigation';
 
@@ -7,9 +8,5 @@ div.content {
   display: grid;
   grid-row-gap: 2rem;
   grid-template-columns: 8rem auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: $toolbar-height;
   max-width: 700px;
-  padding-right: 2rem;
 }
