Fixed a typo on a home page

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -26,4 +26,4 @@ html(⚡)
         src="/assets/animations/logo.jpg"
         placeholder
       )
-    a(href="/tours") Start the yourney
+    a(href="/tours") Start the journey
